Business Layer, DAL grob implementiert
Durch die Großartigen Videos des Allwissenden Maxs, wurde nun eine grobe Struktur des BL und DALs hinzugefügt (bin bei 1:23:40 des 2.Videos)

--- a/SWE_TourManager.DataAccessLayer/SWE_TourManager.DataAccessLayer.csproj
+++ b/SWE_TourManager.DataAccessLayer/SWE_TourManager.DataAccessLayer.csproj
@@ -1,14 +1,12 @@
-﻿<Project Sdk="Microsoft.NET.Sdk.WindowsDesktop">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <OutputType>WinExe</OutputType>
     <TargetFramework>net5.0-windows</TargetFramework>
     <UseWPF>true</UseWPF>
   </PropertyGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\Models\SWE_TourManager.Models.csproj" />
-    <ProjectReference Include="..\SWE_TourManager.BusinessLayer\SWE_TourManager.BusinessLayer.csproj" />
   </ItemGroup>
 
 </Project>
