--- a/SWE_TourManager.BusinessLayer/SWE_TourManager.BusinessLayer.csproj
+++ b/SWE_TourManager.BusinessLayer/SWE_TourManager.BusinessLayer.csproj
@@ -1,14 +1,13 @@
-﻿<Project Sdk="Microsoft.NET.Sdk.WindowsDesktop">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <OutputType>WinExe</OutputType>
     <TargetFramework>net5.0-windows</TargetFramework>
     <UseWPF>true</UseWPF>
   </PropertyGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\Models\SWE_TourManager.Models.csproj" />
-    <ProjectReference Include="..\SWE_TourManager.BusinessLayer\SWE_TourManager.BusinessLayer.csproj" />
+    <ProjectReference Include="..\SWE_TourManager.DataAccessLayer\SWE_TourManager.DataAccessLayer.csproj" />
   </ItemGroup>
 
 </Project>
