--- a/SWE_TourManager.BusinessLayer/SWE_TourManager.BusinessLayer.csproj
+++ b/SWE_TourManager.BusinessLayer/SWE_TourManager.BusinessLayer.csproj
@@ -7,6 +7,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Models\SWE_TourManager.Models.csproj" />
+    <ProjectReference Include="..\SWE_TourManager.DataAccessLayer.PostgresSqlServer\SWE_TourManager.DataAccessLayer.PostgresSqlServer.csproj" />
     <ProjectReference Include="..\SWE_TourManager.DataAccessLayer\SWE_TourManager.DataAccessLayer.csproj" />
   </ItemGroup>
 
