--- a/SWE_TourManager/App.config
+++ b/SWE_TourManager/App.config
@@ -2,6 +2,12 @@
 <configuration>
 	<appSettings>
 		<add key="DALSqlAssembly" value="SWE_TourManager.DataAccessLayer.PostgresSqlServer"/>
+		<add key="DataUrl" value="http://www.mapquestapi.com/directions/v2/route?key=HpWCNiZeZm5zvY1ASIhSKLoJAms1I3Fx"/>
+		<add key="ImageUrl" value="http://www.mapquestapi.com/staticmap/v5/map?key=HpWCNiZeZm5zvY1ASIhSKLoJAms1I3Fx;size=640,480&amp;defaultMarker=none&amp;zoom=11&amp;rand=73&amp;7758036&amp;" />
+		<add key="ImgFolderPath" value="C:\Users\Angelo Raffael Thau\Desktop\Projekte\SWE\SWE2\Img"/>
+		<add key="ExportFolderPath" value="C:\Users\Angelo Raffael Thau\Desktop\Projekte\SWE\SWE2\Exports"/>
+		<add key="PDFFolderPath" value="C:\Users\Angelo Raffael Thau\Desktop\Projekte\SWE\SWE2\PDF"/>
+		<add key="UploadsFolderPath" value="C:\Users\Angelo Raffael Thau\Desktop\Projekte\SWE\SWE2\Uploads"/>
 	</appSettings>
 
 	<connectionStrings>
