Creating Tours Done
Reset Database and Created First Tour with img. Bindings also work.

--- a/SWE_TourManager.BusinessLayer/SWE_TourManager.BusinessLayer.csproj
+++ b/SWE_TourManager.BusinessLayer/SWE_TourManager.BusinessLayer.csproj
@@ -6,6 +6,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\Models\SWE_TourManager.Models.csproj" />
     <ProjectReference Include="..\SWE_TourManager.DataAccessLayer.PostgresSqlServer\SWE_TourManager.DataAccessLayer.PostgresSqlServer.csproj" />
     <ProjectReference Include="..\SWE_TourManager.DataAccessLayer\SWE_TourManager.DataAccessLayer.csproj" />
