--- a/SWE_TourManager/App.config
+++ b/SWE_TourManager/App.config
@@ -6,8 +6,7 @@
 		<add key="ImgUrl" value="http://www.mapquestapi.com/staticmap/v5/map?key=HpWCNiZeZm5zvY1ASIhSKLoJAms1I3Fx&amp;size=640,480&amp;defaultMarker=none&amp;zoom=7&amp;" />
 		<add key="ImgFolderPath" value="C:\Users\Angelo Raffael Thau\Desktop\Projekte\SWE\SWE2\Img"/>
 		<add key="ExportFolderPath" value="C:\Users\Angelo Raffael Thau\Desktop\Projekte\SWE\SWE2\Exports"/>
-		<add key="PDFFolderPath" value="C:\Users\Angelo Raffael Thau\Desktop\Projekte\SWE\SWE2\PDF"/>
-		<add key="UploadsFolderPath" value="C:\Users\Angelo Raffael Thau\Desktop\Projekte\SWE\SWE2\Uploads"/>
+		<add key="PrintFolderPath" value="C:\Users\Angelo Raffael Thau\Desktop\Projekte\SWE\SWE2\Print"/>
 	</appSettings>
 
 	<connectionStrings>
