--- a/SWE_TourManager/SWE_TourManager.csproj
+++ b/SWE_TourManager/SWE_TourManager.csproj
@@ -7,8 +7,18 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="log4net" Version="2.0.12" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\Models\SWE_TourManager.Models.csproj" />
     <ProjectReference Include="..\SWE_TourManager.BusinessLayer\SWE_TourManager.BusinessLayer.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Update="log4net.config">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
